# term

./: .gitignore  Makefile  build.sh  index.html
backend/: Cargo.toml  go.mod  server.go  terminal.js
backend/cmd/: main.go
backend/src/: main.rs
frontend/: package-lock.json  package.json
frontend/src/: main.js  style.css
src/: main.js  server.js  style.css  terminal.js
