[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-ws = "0.3.0"
anyhow = "1.0.94"
futures-util = { version = "0.3.31", features = ["sink"] }
portable-pty = "0.8.1"
pty-process = "=0.1.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
